@@ -1,11 +1,16 @@
 package knu.dykf.landom.config;
 
+import jakarta.servlet.http.HttpServletResponse;
+import knu.dykf.landom.exception.ErrorCode;
 import knu.dykf.landom.jwt.JwtAuthenticationFilter;
 import knu.dykf.landom.jwt.JwtUtil;
 import lombok.RequiredArgsConstructor;
+import lombok.SneakyThrows;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.MediaType;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -18,7 +23,8 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Stream;
 
 @Configuration
 @EnableWebSecurity
@@ -26,8 +32,12 @@ import java.util.Arrays;
 public class SecurityConfig {
 
     private final JwtUtil jwtUtil;
-    @Value("${server.url}")
+
+    @Value("${server.url:}")
     private String serverUrl;
+
+    @Value("${frontend.url:}")
+    private String frontendUrl;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -35,33 +45,79 @@ public class SecurityConfig {
     }
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-        http
+    @SneakyThrows
+    public SecurityFilterChain filterChain(HttpSecurity http) {
+        return http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .exceptionHandling(e -> e
+                        .authenticationEntryPoint((req, res, ex) ->
+                                writeErrorResponse(res, ErrorCode.UNAUTHORIZED))
+                        .accessDeniedHandler((req, res, ex) ->
+                                writeErrorResponse(res, ErrorCode.HANDLE_ACCESS_DENIED))
+                )
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/v1/auth/**", "/swagger-ui/**", "/v3/api-docs/**", "/api/v1/events/**", "/index.html", "/landom-sdk.umd.js").permitAll()
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/v1/events").permitAll()
+                        .requestMatchers("/api/v1/events/**").permitAll()
+                        .requestMatchers(
+                                "/api/v1/auth/**",
+                                "/swagger-ui/**",
+                                "/swagger-ui.html",
+                                "/v3/api-docs/**",
+                                "/index.html",
+                                "/landom-sdk.umd.js",
+                                "/api/v1/projects/*/analytics/section"
+                        ).permitAll()
                         .anyRequest().authenticated()
                 )
-                .addFilterBefore(new JwtAuthenticationFilter(jwtUtil), UsernamePasswordAuthenticationFilter.class);
-
-        return http.build();
+                .addFilterBefore(new JwtAuthenticationFilter(jwtUtil), UsernamePasswordAuthenticationFilter.class)
+                .build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:8080",       // 로컬 개발 환경
-                serverUrl  // 실제 운영 환경
-        ));
-        configuration.addAllowedMethod("*");        // 모든 HTTP Method 허용
-        configuration.addAllowedHeader("*");        // 모든 Header 허용
-        configuration.setAllowCredentials(true);    // 쿠키/인증정보 포함 허용
+        CorsConfiguration events = new CorsConfiguration();
+
+        events.setAllowedOriginPatterns(List.of("*"));
+        events.setAllowedMethods(List.of("POST", "OPTIONS"));
+        events.setAllowedHeaders(List.of("Content-Type", "X-Project-Key"));
+        events.setAllowCredentials(true);
+        events.setAllowPrivateNetwork(true);
+
+        CorsConfiguration defaults = new CorsConfiguration();
+        defaults.setAllowedOrigins(resolveAllowedOrigins());
+        defaults.setAllowedMethods(List.of("*"));
+        defaults.setAllowedHeaders(List.of("*"));
+        defaults.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/api/v1/events", events);
+        source.registerCorsConfiguration("/api/v1/events/**", events);
+        source.registerCorsConfiguration("/**", defaults);
         return source;
+    }
+
+    private List<String> resolveAllowedOrigins() {
+        return Stream.of(
+                        "http://localhost:8080",
+                        "http://localhost:5173",
+                        frontendUrl,
+                        serverUrl
+                )
+                .filter(origin -> origin != null && !origin.isBlank())
+                .distinct()
+                .toList();
+    }
+
+    @SneakyThrows
+    private void writeErrorResponse(HttpServletResponse response, ErrorCode errorCode) {
+        response.setStatus(errorCode.getHttpStatus().value());
+        response.setContentType(MediaType.APPLICATION_JSON_VALUE);
+        response.setCharacterEncoding("UTF-8");
+        response.getWriter().write("""
+                {"code":"%s","message":"%s"}
+                """.formatted(errorCode.name(), errorCode.getMessage()));
     }
 }
